data/all_generated_tests/raw_wast_tests/call_indirect_InfiniteLoops_4183.wast
;; 2. **Test for Type Mismatch and Infinite Loop**:    Define a function type in a module and use `call_indirect` with a mismatched type index (`typeidx`). Surround this with a loop structure that doesn't break due to the mismatch being ignored, potentially leading to an infinite loop.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func
      (loop
        (call_indirect (type 0) (i32.const 1) (i64.const 0))
        (br 0)
      )
    )
  )
  "type mismatch"
)